mds: no assert on frozen dir when scrub path

It's too strict and unnecessary for asok command "scrub_path" to
assert when it checked a frozen dir's rstat, just return false instead.

Fixes: https://tracker.ceph.com/issues/42251

Signed-off-by: Zhi Zhang <zhangz.david@outlook.com>
(cherry picked from commit 76cb4da65ddca986e1515f4a85e6976f20f26a9b)